Fixed service box icon overlap on smaller screens

--- a/journal-machinery/ojs-3.0.1/plugins/themes/nsamr/styles/boxes.less
+++ b/journal-machinery/ojs-3.0.1/plugins/themes/nsamr/styles/boxes.less
@@ -72,6 +72,14 @@ Boxes
   margin: 0px;
 }
 
+
+@media (min-width: 0px) and (max-width: 991px) {
+  .service-box p {
+    margin-bottom: 20px;
+  }
+}
+
+
 .course-box {
   border: 1px solid #ddd;
 }
@@ -107,6 +115,10 @@ Boxes
   margin-top: 10px;
   border-top: 1px solid #ddd;
 }
+
+
+
+
 
 /**event box**/
 .event-box li {
